ingress/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller

spec:
  rules:
    - host: api.event-board.com
      http:
        paths:
          - pathType: Prefix
            path: "/event-service"
            backend:
              service:
                name: event-service
                port:
                  number: 80
          - pathType: Prefix
            path: "/user-service"
            backend:
              service:
                name: user-service
                port:
                  number: 80
